# prdash

./: LICENSE  README.md  prdash  pyproject.toml
prdash/: __main__.py  cli.py
